attempted fix of member modal view issue on iphones

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -485,6 +485,9 @@ input, textarea, select, .uneditable-input {
    }
 	#box:hover #overlay {
 		opacity: 1;
+    .clickable {
+      cursor: pointer;
+    }
 	}
 	.modal-content {
 		.modal-body {
